tuesday night level editing changes

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 <script type="text/javascript" src="item.js"></script> 
 <script type="text/javascript" src="vectors.js"></script> 
 <script type="text/javascript" src="static.js"></script> 
+<script type="text/javascript" src="asteroid.js"></script> 
+<script type="text/javascript" src="enemy.js"></script>
 <script type="text/javascript" src="player.js"></script> 
 <script type="text/javascript" src="camera.js"></script> 
 <script type="text/javascript" src="fbx-model.js"></script> 
