--- a/levels/l1.html
+++ b/levels/l1.html
@@ -8,7 +8,16 @@
 <zpos> 200
 <type> asteroid
 <amount> 5
-<pos> 0 0 250
+<pos> 0 0 450
+<phase> 1
+</event>
+
+<event>
+<zpos> 200
+<type> asteroid
+<amount> 15
+<pos> 0 0 450
+<phase> 0
 </event>
 
 <event>
@@ -16,6 +25,7 @@
 <type> enemy_swarm
 <amount> 4
 <behavior> simple_track
+<model> 4
 <pos> 0 0 500
 </event>
 
