wed during the day, has levels and enemies working

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 <script type="text/javascript" src="jquery.js"></script> 
 <script type="text/javascript" src="io_handler.js"></script> 
 <script type="text/javascript" src="background.js"></script> 
+<script type="text/javascript" src="followBehavior.js"></script> 
+<script type="text/javascript" src="level.js"></script> 
 <script type="text/javascript" src="item.js"></script> 
 <script type="text/javascript" src="vectors.js"></script> 
 <script type="text/javascript" src="static.js"></script> 
