--- a/levels/l1.html
+++ b/levels/l1.html
@@ -1,32 +1,33 @@
 // level object
 // level : 1
-<level>
-<id> 1
-<length> 10000
+<level> 
+<id> 1 
+<length> 10000 
 
-<event>
-<zpos> 200
-<type> asteroid
-<amount> 5
-<pos> 0 0 450
-<phase> 1
-</event>
+<event> 
+<zpos> 200 
+<type> asteroid 
+<amount> 5 
+<pos> 0 0 450 
+<phase> 1 
+</event> 
 
-<event>
-<zpos> 200
-<type> asteroid
-<amount> 15
-<pos> 0 0 450
-<phase> 0
-</event>
+<event> 
+<zpos> 200 
+<type> asteroid 
+<amount> 15 
+<pos> 0 0 450 
+<phase> 0 
+</event> 
 
-<event>
-<zpos> 400 
-<type> enemy_swarm
-<amount> 4
-<behavior> simple_track
-<model> 4
-<pos> 0 0 500
-</event>
+<event> 
+<zpos> 400  
+<type> enemy_swarm 
+<amount> 4 
+<behavior> simple_track 
+<model> 8 
+<radius> 30 
+<pos> 60 0 650 
+</event> 
 
-</level>
+</level> 
