--- a/index.html
+++ b/index.html
@@ -51,83 +51,61 @@
 	}
 
 </script>
-
-<script id="per-fragment-lighting-fs" type="x-shader/x-fragment">
-    #ifdef GL_ES
-    precision highp float;
-    #endif
-
+<script id="shader-fs-flash" type="x-shader/x-fragment">
+  #ifdef GL_ES
+  precision highp float;
+  #endif 
+  
     varying vec2 vTextureCoord;
-    varying vec3 vTransformedNormal;
-    varying vec4 vPosition;
-
-    uniform float uMaterialShininess;
-
-    uniform bool uShowSpecularHighlights;
-
-    uniform vec3 uAmbientColor;
-
-    uniform vec3 uPointLightingLocation;
-    uniform vec3 uPointLightingSpecularColor;
-    uniform vec3 uPointLightingDiffuseColor;
+	varying vec4 color;
+    varying vec3 vLightWeighting;
 
     uniform sampler2D uSampler;
 
-
     void main(void) {
-        vec3 lightWeighting;
-
-		vec3 lightDirection = normalize(uPointLightingLocation - vPosition.xyz);
-		vec3 normal = normalize(vTransformedNormal);
-
-		float specularLightWeighting = 0.0;
-		if (uShowSpecularHighlights) {
-			vec3 eyeDirection = normalize(-vPosition.xyz);
-			vec3 reflectionDirection = reflect(-lightDirection, normal);
-
-			specularLightWeighting = pow(max(dot(reflectionDirection, eyeDirection), 0.0), uMaterialShininess);
-		}
-
-		float diffuseLightWeighting = max(dot(normal, lightDirection), 0.0);
-		lightWeighting = uAmbientColor
-			+ uPointLightingSpecularColor * specularLightWeighting
-			+ uPointLightingDiffuseColor * diffuseLightWeighting;
-
-        vec4 fragmentColor;
-        if (uUseTextures) {
-            fragmentColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
-        } else {
-            fragmentColor = vec4(1.0, 1.0, 1.0, 1.0);
-        }
-        gl_FragColor = vec4(fragmentColor.rgb * lightWeighting, fragmentColor.a);
-    }
+        vec4 textureColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+        gl_FragColor = vec4(textureColor.rgb * vLightWeighting, textureColor.a);
+		//gl_FragColor = color;
+        //gl_FragColor = vec4(vec3(0.0,1.0,0.0) * vLightWeighting, color.a);
+	}
 </script>
 
-<script id="per-fragment-lighting-vs" type="x-shader/x-vertex">
-    attribute vec3 aVertexPosition;
-    attribute vec3 aVertexNormal;
-    attribute vec2 aVertexUV;
-
-    uniform mat4 uMVMatrix;
-    uniform mat4 uPMatrix;
-    uniform mat3 uNMatrix;
-
-    varying vec2 vTextureCoord;
-    varying vec3 vTransformedNormal;
-    varying vec4 vPosition;
-
+<script id="shader-vs-flash" type="x-shader/x-vertex">
+	uniform mat4 uMVMatrix;
+	uniform mat4 uPMatrix;
+	uniform mat3 uNMatrix;
+	
+	uniform vec3 uAmbientColor;
+	uniform vec3 uLightingDirection;
+	uniform vec3 uDirectionalColor;
+	
+	varying vec3 vLightWeighting;
+	varying vec2 vTextureCoord;
+	
+	attribute vec3 aVertexPosition;
+	attribute vec3 aVertexNormal;
+	attribute vec4 aVertexColor;
+	attribute vec2 aVertexUV;
+	
+	varying vec4 color;
 
     void main(void) {
-        vPosition = uMVMatrix * vec4(aVertexPosition, 1.0);
-        gl_Position = uPMatrix * vPosition;
+		color = aVertexColor;
+		gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
         vTextureCoord = aVertexUV;
-        vTransformedNormal = uNMatrix * aVertexNormal;
-    }
+
+        vec3 transformedNormal = uNMatrix * aVertexNormal;
+        float directionalLightWeighting = max(dot(transformedNormal, uLightingDirection), 0.0);
+        vLightWeighting = uAmbientColor + uDirectionalColor * directionalLightWeighting;
+	}
+
 </script>
 
 <script type="text/javascript" src="jquery.js"></script> 
 <script type="text/javascript" src="io_handler.js"></script> 
 <script type="text/javascript" src="background.js"></script> 
+<script type="text/javascript" src="followBehavior.js"></script> 
+<script type="text/javascript" src="level.js"></script> 
 <script type="text/javascript" src="item.js"></script> 
 <script type="text/javascript" src="vectors.js"></script> 
 <script type="text/javascript" src="static.js"></script> 
@@ -149,6 +127,7 @@
 <canvas id="myCanvas" width="800" height="600" style="border:3px solid #EEEEEE; margin:0px; position:absolute;">
 Your browser does not support the canvas element.
 </canvas>
+<div id="healthbar" style="display:block;position:absolute;color:white;top:50px;left:50px;">health: 10</div>
 </body>
 
 </html>
