--- a/meshes/meshids.html
+++ b/meshes/meshids.html
@@ -1,8 +1,9 @@
 0 : player_ship.html
 1 : asteroid_1.html
-2 : asteroid_1.html
-3 : asteroid_1.html
-4 : asteroid_1.html
+2 : asteroid_2.html
+3 : asteroid_3.html
+4 : asteroid_4.html
 5 : background.html
 6 : laser.html
 7 : bomb.html
+8 : ufo.html
