--- a/levels/l1.html
+++ b/levels/l1.html
@@ -2,7 +2,7 @@
 // level : 1
 <level> 
 <id> 1 
-<length> 3000 
+<length> 500 
 
 <event> 
 <zpos> 200 
@@ -13,74 +13,12 @@
 <phase> 1 
 </event> 
 
-<event> 
-<zpos> 200 
-<type> asteroid 
-<amount> 15 
-<pos> 150 0 550 
-<radius> 30 
-<phase> 0 
-</event> 
+<boss> 
+<bzpos> 500 
+<bpos> 0 0 750 
+<bradius> 70 
+<bmodel> 11 
+<bhp> 100 
+</boss> 
 
-<event> 
-<zpos> 400  
-<type> enemy_swarm 
-<amount> 4 
-<behavior> simple_track 
-<model> 8 
-<radius> 30 
-<phase> 0 
-<pos> 60 0 650 
-</event> 
-
-<event> 
-<zpos> 500  
-<type> enemy_formation 
-<amount> 4 
-<shape> line 
-<dist> 100 
-<angle> 0
-<behavior> simple_track 
-<model> 8 
-<radius> 30 
-<phase> 1 
-<pos> -100 0 700 
-</event> 
-
-<event> 
-<zpos> 900 
-<type> asteroid 
-<amount> 15 
-<pos> 150 0 1200 
-<radius> 30 
-<phase> 0 
-</event> 
-
-<event> 
-<zpos> 1050 
-<type> asteroid 
-<amount> 7 
-<pos> -150 0 1300 
-<radius> 30 
-<phase> 1 
-</event> 
-
-<event> 
-<zpos> 1500
-<type> asteroid 
-<amount> 7 
-<pos> 0 0 1750 
-<radius> 30 
-<phase> 1
-</event> 
-
-<event> 
-<zpos> 1750 
-<type> asteroid 
-<amount> 15 
-<pos> 60 0 2000 
-<radius> 30 
-<phase> 0 
-</event> 
-
-</level> 
+</level> // JavaScript Document
