--- a/meshes/meshids.html
+++ b/meshes/meshids.html
@@ -1,9 +1,13 @@
 0 : player_ship.html
 1 : asteroid_1.html
 2 : asteroid_2.html
-3 : asteroid_3.html
-4 : asteroid_4.html
+3 : turret_1.html
+4 : laser.html
 5 : background.html
 6 : laser.html
 7 : bomb.html
 8 : ufo.html
+9 : explosion_2.html
+10 : life.html
+11 : boss_2.html
+12 : laser_2.html
