thurs night final

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
 <script type="text/javascript" src="io_handler.js"></script> 
 <script type="text/javascript" src="background.js"></script> 
 <script type="text/javascript" src="followBehavior.js"></script> 
+<script type="text/javascript" src="turretBehavior.js"></script> 
 <script type="text/javascript" src="level.js"></script> 
 <script type="text/javascript" src="item.js"></script> 
 <script type="text/javascript" src="vectors.js"></script> 
@@ -228,6 +229,7 @@ Your browser does not support the canvas element.
 
 <div id="finalBackground">&nbsp;</div>
 <div id="finalScore"><img src="menus/final_score.png"></div>
+<div id="finalScoreNum"></div>
 
 </body>
 
