11-3 final gameplay commit

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@ Your browser does not support the canvas element.
 <div id="finalBackground">&nbsp;</div>
 <div id="finalScore"><img src="menus/final_score.png"></div>
 <div id="finalScoreNum"></div>
-
+<div id="finalReplay"><a href="#" onClick="replay()"><img src="menus/replay_button.png"></a></div>
 
 <div id="gameOverBackground">&nbsp;</div>
 <div id="gameOverScore"><img src="menus/final_score.png"></div>
 <div id="gameOverScoreNum"></div>
-
+<div id="gameOverReplay"><a href="#" onClick="replay()"><img src="menus/replay_button.png"></a></div>
 
 </body>
 
