--- a/levels/l4.html
+++ b/levels/l4.html
@@ -29,7 +29,7 @@
 <pos> 50 0 450 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -73,7 +73,7 @@
 <pos> 90 0 1200 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -165,7 +165,7 @@
 <pos> 250 0 2850 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -198,7 +198,7 @@
 <pos> -175 0 3250 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -217,7 +217,7 @@
 <pos> 175 0 3250 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -269,7 +269,7 @@
 <pos> 0 0 4550 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -279,7 +279,7 @@
 <pos> 150 0 4850 
 <radius> 30 
 <phase> 1 
-<model> 3 
+<model> 4 
 </event> 
 
 <event> 
@@ -302,6 +302,7 @@
 <bradius> 70 
 <bmodel> 11 
 <bhp> 100 
+<brate> 10 
 </boss> 
 
 </level> // JavaScript Document
